Thu Mar  4 08:53:03 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/TimeConversion/time_conversion.cpp:
          Resolved compile issue.

Thu Mar  4 08:30:43 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * bin/ciao_tests.lst:
        * connectors/dds4ccm/tests/Policies/*:
          Added a policy test. This tests all the ndds
          streaming operators.

Thu Mar  4 07:51:20 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/idl/ccm_dds.idl:
          Renamed ifdef according to file name.

        * connectors/dds4ccm/impl/dds/:
        * connectors/dds4ccm/impl/dds/Coherent_Changes_Guard.h:
        * connectors/dds4ccm/impl/dds/Coherent_Changes_Guard.cpp:
        * connectors/dds4ccm/impl/dds/ContentFilteredTopic.h:
        * connectors/dds4ccm/impl/dds/ContentFilteredTopic.cpp:
        * connectors/dds4ccm/impl/dds/DDSCallbackStatusHandler.cpp:
        * connectors/dds4ccm/impl/dds/DDS_Base_Connector_T.h:
        * connectors/dds4ccm/impl/dds/DDS_Base_Connector_T.cpp:
        * connectors/dds4ccm/impl/dds/DDS_Event_Connector_T.h:
        * connectors/dds4ccm/impl/dds/DDS_Event_Connector_T.cpp:
        * connectors/dds4ccm/impl/dds/DDS_Get_T.h:
        * connectors/dds4ccm/impl/dds/DDS_Get_T.cpp:
        * connectors/dds4ccm/impl/dds/DDS_Listen_T.h:
        * connectors/dds4ccm/impl/dds/DDS_Listen_T.cpp:
        * connectors/dds4ccm/impl/dds/DDS_Read_T.h:
        * connectors/dds4ccm/impl/dds/DDS_Read_T.cpp:
        * connectors/dds4ccm/impl/dds/DDS_StateListen_T.h:
        * connectors/dds4ccm/impl/dds/DDS_StateListen_T.cpp:
        * connectors/dds4ccm/impl/dds/DDS_State_Connector_T.h:
        * connectors/dds4ccm/impl/dds/DDS_State_Connector_T.cpp:
        * connectors/dds4ccm/impl/dds/DDS_TopicBase_Connector_T.h:
        * connectors/dds4ccm/impl/dds/DDS_Update_T.h:
        * connectors/dds4ccm/impl/dds/DDS_Update_T.cpp:
        * connectors/dds4ccm/impl/dds/DDS_Write_T.h: