@@ -1,3 +1,8 @@
+Thu Mar  4 08:55:49 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * connectors/dds4ccm/impl/dds/ndds/TimeUtilities.h:
+          Added.
+
 Thu Mar  4 08:53:03 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * connectors/dds4ccm/tests/TimeConversion/time_conversion.cpp:
